--- a/src/Applications/MultiAlign/Windows/Viewers/AnalysisView.xaml
+++ b/src/Applications/MultiAlign/Windows/Viewers/AnalysisView.xaml
@@ -9,6 +9,7 @@
              xmlns:converters="clr-namespace:MultiAlign.Converters"          
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:oxy="http://oxyplot.codeplex.com"
+             xmlns:wpf="http://oxyplot.org/wpf"
              mc:Ignorable="d" 
              d:DesignHeight="616" d:DesignWidth="1100">    
     <Grid>
@@ -53,7 +54,7 @@
                             <RowDefinition Height="*" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <oxy:Plot Model="{Binding ClustersPlotModel.Model}"/>
+                        <wpf:Plot Model="{Binding ClustersPlotModel.Model}"/>
                         <Button 
                             Grid.Row="1"
                             Margin="5"
