--- a/src/MultiAlignRogue/DMS/DmsLookupView.xaml
+++ b/src/MultiAlignRogue/DMS/DmsLookupView.xaml
@@ -1,13 +1,17 @@
 ﻿<Window x:Class="MultiAlignRogue.DMS.DmsLookupView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Search DMS" Height="375" Width="1100">
+        Title="Search DMS" Height="400" Width="1100">
+    
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BoolToVis" />
+    </Window.Resources>
     
     <Grid Margin="15">
         <Grid.RowDefinitions>
             <RowDefinition Height="80*" />
             <RowDefinition Height="10" />
-            <RowDefinition Height="55" />
+            <RowDefinition Height="75" />
             <RowDefinition Height="10" />
             <RowDefinition Height="25" />
         </Grid.RowDefinitions>
@@ -37,11 +41,11 @@
                         <KeyBinding Key="Enter" Command="{Binding SearchCommand}" />
                     </TextBox.InputBindings>
                 </TextBox>
-                <ComboBox Grid.Row="1" Grid.Column="2" Height="25" IsReadOnly="False" IsEditable="True" ItemsSource="{Binding PreviousDatasets.Keys}" Text="{Binding DatasetFilter, UpdateSourceTrigger=PropertyChanged}">
-                    <ComboBox.InputBindings>
+                <TextBox Grid.Row="1" Grid.Column="2" Height="25" IsReadOnly="False" Text="{Binding DatasetFilter, UpdateSourceTrigger=PropertyChanged}">
+                    <TextBox.InputBindings>
                         <KeyBinding Key="Enter" Command="{Binding SearchCommand}" />
-                    </ComboBox.InputBindings>
-                </ComboBox>
+                    </TextBox.InputBindings>
+                </TextBox>
 
                 <Button Grid.Row="1" Grid.Column="4" Command="{Binding SearchCommand}" Height="25">Search</Button>
 
@@ -95,19 +99,23 @@
                 <TextBlock Text="Output Directory" FontWeight="Bold" />
             </GroupBox.Header>
             
-            <Grid Margin="3">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="5" />
-                    <ColumnDefinition Width="70" />
-                </Grid.ColumnDefinitions>
-                
-                <TextBox Grid.Column="0" Text="{Binding OutputDirectory, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <Button Grid.Column="2" Command="{Binding BrowseOutputDirectoriesCommand}">Browse</Button>
-            </Grid>
+            <StackPanel Margin="3">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="5" />
+                        <ColumnDefinition Width="70" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBox Grid.Column="0" Text="{Binding OutputDirectory, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <Button Grid.Column="2" Command="{Binding BrowseOutputDirectoriesCommand}">Browse</Button>
+                </Grid>
+
+                <CheckBox Margin="0,5,0,0" IsChecked="{Binding ShouldCopyFiles, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="Copy files to output directory" />
+            </StackPanel>
         </GroupBox>
 
-        <StackPanel Orientation="Horizontal" Grid.Row="4">
+        <StackPanel Orientation="Horizontal" Grid.Row="4" Visibility="{Binding IsCopying, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource BoolToVis}}">
             <ProgressBar Width="70" Minimum="0" Maximum="100"  Value="{Binding Progress}" HorizontalAlignment="Left" Margin="0,0,10,0" />
             <TextBlock Text="{Binding CopyStatusText}" />
         </StackPanel>
