--- a/src/MultiAlignRogue/MainWindow.xaml
+++ b/src/MultiAlignRogue/MainWindow.xaml
@@ -35,7 +35,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <TabControl Grid.Column="1" Margin="10,25,10,10">
-            <TabItem Header="Feature Finding">
+            <TabItem Header="Feature Finding" Height="23" VerticalAlignment="Bottom">
                 <Grid Margin="0,19,39,8" HorizontalAlignment="Right" Width="384">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="183*"/>
@@ -71,7 +71,7 @@
                               IsChecked="{Binding ShouldUseIntensityFilter, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}"/>
                     <TextBox Grid.Column="1" HorizontalContentAlignment="Center" Height="19" Margin="0,132,14,0" TextWrapping="Wrap" VerticalAlignment="Top" 
                              Text="{Binding MinimumIntensity, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Right" Width="60"/>
-                    
+
                     <Button Content="Load MS Features" HorizontalAlignment="Left" Height="24" Margin="0,303,0,0" VerticalAlignment="Top" Width="114" Command="{Binding FindMSFeaturesCommand}"/>
                     <Button Content="Plot MS Features" HorizontalAlignment="Left" Height="24" Margin="0,332,0,0" VerticalAlignment="Top" Width="114" Command="{Binding PlotMSFeaturesCommand}"/>
                 </Grid>
@@ -82,29 +82,26 @@
                         <ColumnDefinition Width="22*"/>
                         <ColumnDefinition Width="51*"/>
                     </Grid.ColumnDefinitions>
-                    <Label Content="Baseline" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="39,0,0,387" Width="79" Height="24" Grid.Column="1"/>
-                    <ComboBox HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="424" Margin="4,0,0,365" Grid.ColumnSpan="2" DisplayMemberPath="DatasetName" 
+                    <Label Content="Baseline" Margin="39,0,188,0" Grid.Column="1" Height="24" VerticalAlignment="Top"/>
+                    <ComboBox Margin="4,24,10,0" Grid.ColumnSpan="2" DisplayMemberPath="DatasetName" 
                               ItemsSource="{Binding m_analysis.MetaData.Datasets}"
-                              SelectedItem="{Binding SelectedBaseline, Mode=TwoWay}"/>
+                              SelectedItem="{Binding SelectedBaseline, Mode=TwoWay}" Height="22" VerticalAlignment="Top"/>
                     <Label Content="Tolerances" HorizontalAlignment="Left" Height="24" Margin="10,51,0,0" VerticalAlignment="Top" Width="77" FontWeight="Bold"/>
 
                     <Label Content="Mass Tolerance" VerticalContentAlignment="Top"  HorizontalAlignment="Left" Height="28" Margin="11,73,0,0" VerticalAlignment="Top" Width="168" Grid.ColumnSpan="2"/>
-                    <TextBox HorizontalContentAlignment="Center" Height="19" Margin="0,76,261,0" TextWrapping="Wrap" VerticalAlignment="Top" 
-                             Text="{Binding MassTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Right" Width="60" Grid.ColumnSpan="2"/>
+                    <TextBox HorizontalContentAlignment="Center" Height="19" Margin="117,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" 
+                             Text="{Binding MassTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="60"/>
                     <Label Content="NET Tolerance" VerticalContentAlignment="Top"  HorizontalAlignment="Left" Height="28" Margin="11,93,0,0" VerticalAlignment="Top" Width="168" Grid.ColumnSpan="2"/>
-                    <TextBox HorizontalContentAlignment="Center" Height="19" Margin="0,97,261,0" TextWrapping="Wrap" VerticalAlignment="Top" 
-                             Text="{Binding NetTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Right" Width="60" Grid.ColumnSpan="2"/>
-                    <Label Content="Alignment Algorithm" HorizontalContentAlignment="Left" Height="28" VerticalAlignment="Top" Margin="151,51,0,0" Width="150" HorizontalAlignment="Left" FontWeight="Bold" Grid.Column="1"/>
-                    <ComboBox HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="150" Margin="142,0,0,309" Grid.Column="1" SelectedItem="{Binding SelectedAlignmentAlgorithm}"
-                              ItemsSource="{Binding m_AnalysisOptions.AlignmentAlgorithms, UpdateSourceTrigger=PropertyChanged}"/>
-                    <Label Content="Clustering Method" HorizontalContentAlignment="Left" Height="28" VerticalAlignment="Top" Margin="150,104,0,0" Width="150" HorizontalAlignment="Left" FontWeight="Bold" Grid.Column="1"/>
-                    <ComboBox HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="150" Margin="142,0,0,256" Grid.Column="1" SelectedItem="{Binding SelectedLcmsFeatureClusteringAlgorithm}"
-                              ItemsSource="{Binding m_AnalysisOptions.ClusteringAlgorithms}"/>
-                    <Label Content="Calibration Method" HorizontalContentAlignment="Left" Height="28" VerticalAlignment="Top" Margin="150,152,0,0" Width="150" HorizontalAlignment="Left" FontWeight="Bold" Grid.Column="1"/>
-                    <ComboBox HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="150" Margin="142,0,0,208" Grid.Column="1" SelectedItem="{Binding SelectedCalibrationType}"
-                              ItemsSource="{Binding CalibrationOptions}"/>
-                    <Button Content="Align to Baseline" HorizontalAlignment="Left" Height="24" Margin="12,377,0,0" VerticalAlignment="Top" Width="110" Command="{Binding AlignToBaselineCommand}"/>
-                    <Button Content="Display Alignment" Grid.Column="1" HorizontalAlignment="Left" Height="24" Margin="184,377,0,0" VerticalAlignment="Top" Width="108" Command="{Binding DisplayAlignmentCommand}"/>
+                    <TextBox HorizontalContentAlignment="Center" Height="19" Margin="117,97,0,0" TextWrapping="Wrap" VerticalAlignment="Top" 
+                             Text="{Binding NetTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="60"/>
+                    <Label Content="Alignment Algorithm" HorizontalContentAlignment="Left" Margin="151,51,5,0" FontWeight="Bold" Grid.Column="1" Height="28" VerticalAlignment="Top"/>
+                    <ComboBox Margin="142,80,14,0" Grid.Column="1" SelectedItem="{Binding SelectedAlignmentAlgorithm}"
+                              ItemsSource="{Binding m_AnalysisOptions.AlignmentAlgorithms, UpdateSourceTrigger=PropertyChanged}" Height="22" VerticalAlignment="Top"/>
+                    <Label Content="Calibration Method" HorizontalContentAlignment="Left" Margin="150,101,6,0" FontWeight="Bold" Grid.Column="1" Height="28" VerticalAlignment="Top"/>
+                    <ComboBox Margin="142,130,14,0" Grid.Column="1" SelectedItem="{Binding SelectedCalibrationType}"
+                              ItemsSource="{Binding CalibrationOptions}" Height="22" VerticalAlignment="Top"/>
+                    <Button Content="Align to Baseline" HorizontalAlignment="Left" Margin="12,0,0,10" Width="110" Command="{Binding AlignToBaselineCommand}" Height="24" VerticalAlignment="Bottom"/>
+                    <Button Content="Display Alignment" Grid.Column="1" Margin="0,0,14,10" Command="{Binding DisplayAlignmentCommand}" HorizontalAlignment="Right" Width="108" Height="24" VerticalAlignment="Bottom"/>
 
                 </Grid>
             </TabItem>
@@ -113,10 +110,17 @@
             </TabItem>
             <TabItem Header="LC-MS Clustering" Margin="-2,-2,-3,-1">
                 <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="168*"/>
-                        <ColumnDefinition Width="335*"/>
-                    </Grid.ColumnDefinitions>
+                    <Label Content="Clustering Method" HorizontalContentAlignment="Left" Height="28" VerticalAlignment="Top" Margin="10,11,0,0" Width="150" HorizontalAlignment="Left" FontWeight="Bold"/>
+                    <ComboBox Margin="10,37,278,0" SelectedItem="{Binding SelectedLcmsFeatureClusteringAlgorithm}"
+                              ItemsSource="{Binding m_AnalysisOptions.ClusteringAlgorithms}" Height="22" VerticalAlignment="Top"/>
+                    <Label Content="Distance Function" Margin="10,62,298,0" FontWeight="Bold" Height="26" VerticalAlignment="Top"/>
+                    <ComboBox Margin="10,88,278,0" SelectedItem="{Binding SelectedDistanceFunction}" ItemsSource="{Binding DistanceMetrics}" Height="22" VerticalAlignment="Top"/>
+                    <Label Content="Centroid Representation" Margin="275,11,13,0" FontWeight="Bold" Height="26" VerticalAlignment="Top"/>
+                    <ComboBox Margin="275,37,13,0" SelectedItem="{Binding SelectedCentroidMethod}" ItemsSource="{Binding CentroidRepresentations}" Height="22" VerticalAlignment="Top"/>
+                    <CheckBox Content="Separate by Charge" Margin="275,75,25,0" FontWeight="Bold" Height="22" VerticalAlignment="Top" 
+                              IsChecked="{Binding m_options.LcmsClusteringOptions.ShouldSeparateCharge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button Content="Cluster Features" Margin="12,0,323,10" Height="24" Command="{Binding ClusterFeaturesCommand}" VerticalAlignment="Bottom"/>
+                    <Button Content="View Clusters" Margin="322,0,13,10" Height="24" Command="{Binding DisplayClustersCommand}" VerticalAlignment="Bottom"/>
                 </Grid>
             </TabItem>
         </TabControl>
@@ -126,7 +130,7 @@
                 <KeyBinding Command="{Binding AddFolderCommand}" Key="Enter" />
             </TextBox.InputBindings>
         </TextBox>
-        
+
         <Button Content="Browse" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="50" Height="22" Margin="290,0,0,19" Command="{Binding SelectDirectoryCommand}"></Button>
         <Button Content="Add" HorizontalAlignment="Left" Margin="344,0,0,19" Width="50" Height="22" VerticalAlignment="Bottom" Command="{Binding AddFolderCommand}"/>
 
