--- a/src/MultiAlignRogue/MainWindow.xaml
+++ b/src/MultiAlignRogue/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:multiAlignRogue="clr-namespace:MultiAlignRogue"
-        Title="MultiAlign Rogue" Height="508.075" Width="976">
+        Title="MultiAlign Rogue" Height="508.075" Width="976" x:Name="RogueMainWindow">
     <Window.DataContext>
         <multiAlignRogue:MainViewModel/>
     </Window.DataContext>
@@ -76,16 +76,16 @@
                     <Button Content="Plot MS Features" HorizontalAlignment="Left" Height="24" Margin="0,332,0,0" VerticalAlignment="Top" Width="114" Command="{Binding PlotMSFeaturesCommand}"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Dataset Alignment" HorizontalAlignment="Left" Width="113" Margin="-2,0,-14,0">
+            <TabItem Header="Dataset Alignment" HorizontalAlignment="Left" Width="113" Margin="-2,0,-14,0" DataContext="{Binding AlignmentSettingsViewModel, UpdateSourceTrigger=PropertyChanged}">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="22*"/>
                         <ColumnDefinition Width="51*"/>
                     </Grid.ColumnDefinitions>
                     <Label Content="Baseline" Margin="39,0,188,0" Grid.Column="1" Height="24" VerticalAlignment="Top"/>
-                    <ComboBox Margin="4,24,10,0" Grid.ColumnSpan="2" DisplayMemberPath="DatasetName" 
-                              ItemsSource="{Binding m_analysis.MetaData.Datasets}"
-                              SelectedItem="{Binding SelectedBaseline, Mode=TwoWay}" Height="22" VerticalAlignment="Top"/>
+                    <ComboBox Margin="4,24,10,0" Grid.ColumnSpan="2" DisplayMemberPath="Dataset.DatasetName" 
+                              ItemsSource="{Binding DataContext.Datasets, ElementName=RogueMainWindow}"
+                              SelectedItem="{Binding SelectedBaseline, Mode=TwoWay}" Height="22" VerticalAlignment="Top" />
                     <Label Content="Tolerances" HorizontalAlignment="Left" Height="24" Margin="10,51,0,0" VerticalAlignment="Top" Width="77" FontWeight="Bold"/>
 
                     <Label Content="Mass Tolerance" VerticalContentAlignment="Top"  HorizontalAlignment="Left" Height="28" Margin="11,73,0,0" VerticalAlignment="Top" Width="168" Grid.ColumnSpan="2"/>
@@ -96,7 +96,7 @@
                              Text="{Binding NetTolerance, Mode=TwoWay, NotifyOnSourceUpdated=True, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="60"/>
                     <Label Content="Alignment Algorithm" HorizontalContentAlignment="Left" Margin="151,51,5,0" FontWeight="Bold" Grid.Column="1" Height="28" VerticalAlignment="Top"/>
                     <ComboBox Margin="142,80,14,0" Grid.Column="1" SelectedItem="{Binding SelectedAlignmentAlgorithm}"
-                              ItemsSource="{Binding m_AnalysisOptions.AlignmentAlgorithms, UpdateSourceTrigger=PropertyChanged}" Height="22" VerticalAlignment="Top"/>
+                              ItemsSource="{Binding AlignmentAlgorithms, UpdateSourceTrigger=PropertyChanged}" Height="22" VerticalAlignment="Top"/>
                     <Label Content="Calibration Method" HorizontalContentAlignment="Left" Margin="150,101,6,0" FontWeight="Bold" Grid.Column="1" Height="28" VerticalAlignment="Top"/>
                     <ComboBox Margin="142,130,14,0" Grid.Column="1" SelectedItem="{Binding SelectedCalibrationType}"
                               ItemsSource="{Binding CalibrationOptions}" Height="22" VerticalAlignment="Top"/>
