--- a/src/MultiAlignRogue/MainWindow.xaml
+++ b/src/MultiAlignRogue/MainWindow.xaml
@@ -105,20 +105,20 @@
 
                 </Grid>
             </TabItem>
-            <TabItem Header="AMT Alignment" HorizontalAlignment="Left" VerticalAlignment="Top" Width="107" Margin="-2,0,0,0">
+            <TabItem Header="AMT Alignment" HorizontalAlignment="Left" VerticalAlignment="Top" Width="107" Margin="-2,0,0,0" Height="23">
                 <Grid/>
             </TabItem>
-            <TabItem Header="LC-MS Clustering" Margin="-2,-2,-3,-1">
+            <TabItem Header="LC-MS Clustering" Margin="-2,-2,-3,-1" DataContext="{Binding ClusterSettingsViewModel}"> 
                 <Grid>
                     <Label Content="Clustering Method" HorizontalContentAlignment="Left" Height="28" VerticalAlignment="Top" Margin="10,11,0,0" Width="150" HorizontalAlignment="Left" FontWeight="Bold"/>
                     <ComboBox Margin="10,37,278,0" SelectedItem="{Binding SelectedLcmsFeatureClusteringAlgorithm}"
-                              ItemsSource="{Binding m_AnalysisOptions.ClusteringAlgorithms}" Height="22" VerticalAlignment="Top"/>
+                              ItemsSource="{Binding ClusteringMethods}" Height="22" VerticalAlignment="Top"/>
                     <Label Content="Distance Function" Margin="10,62,298,0" FontWeight="Bold" Height="26" VerticalAlignment="Top"/>
                     <ComboBox Margin="10,88,278,0" SelectedItem="{Binding SelectedDistanceFunction}" ItemsSource="{Binding DistanceMetrics}" Height="22" VerticalAlignment="Top"/>
                     <Label Content="Centroid Representation" Margin="275,11,13,0" FontWeight="Bold" Height="26" VerticalAlignment="Top"/>
                     <ComboBox Margin="275,37,13,0" SelectedItem="{Binding SelectedCentroidMethod}" ItemsSource="{Binding CentroidRepresentations}" Height="22" VerticalAlignment="Top"/>
                     <CheckBox Content="Separate by Charge" Margin="275,75,25,0" FontWeight="Bold" Height="22" VerticalAlignment="Top" 
-                              IsChecked="{Binding m_options.LcmsClusteringOptions.ShouldSeparateCharge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                              IsChecked="{Binding ShouldSeparateByCharge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                     <Button Content="Cluster Features" Margin="12,0,323,10" Height="24" Command="{Binding ClusterFeaturesCommand}" VerticalAlignment="Bottom"/>
                     <Button Content="View Clusters" Margin="322,0,13,10" Height="24" Command="{Binding DisplayClustersCommand}" VerticalAlignment="Bottom"/>
                 </Grid>
