--- a/src/MultiAlignRogue/MainWindow.xaml
+++ b/src/MultiAlignRogue/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:multiAlignRogue="clr-namespace:MultiAlignRogue"
-        Title="MultiAlign Rogue" Height="508.075" Width="976" x:Name="RogueMainWindow">
+        Title="{Binding WindowTitle}" Height="508.075" Width="976" x:Name="RogueMainWindow">
     <Window.DataContext>
         <multiAlignRogue:MainViewModel/>
     </Window.DataContext>
@@ -16,16 +16,22 @@
         </Grid.ColumnDefinitions>
         <Menu Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="{Binding ElementName=MainGrid,Path=ActualWidth}">
             <MenuItem Header="File">
-                <MenuItem Header="Select Files" HorizontalAlignment="Left" Width="168" Margin="0,0,-8,0" Command="{Binding SelectFilesCommand}"/>
-                <MenuItem Header="Search DMS" Command="{Binding SearchDmsCommand}" Visibility="{Binding ShowOpenFromDms, Converter={StaticResource BoolToVis}}" />
+                <MenuItem Header="New Project" Command="{Binding CreateNewProjectCommand}" />
                 <MenuItem Header="Load Project" HorizontalAlignment="Left" Width="168" Command="{Binding LoadProjectCommand}" />
+                <MenuItem Header="Open Dataset">
+                    <MenuItem Header="Select Files" HorizontalAlignment="Left" Width="168" Margin="0,0,-8,0" Command="{Binding SelectFilesCommand}"/>
+                    <MenuItem Header="Select Directory" Command="{Binding SelectDirectoryCommand}" />
+                    <MenuItem Header="From DMS" Command="{Binding SearchDmsCommand}" Visibility="{Binding ShowOpenFromDms, Converter={StaticResource BoolToVis}}" />
+                </MenuItem>
+                <Separator />
                 <MenuItem Header="Save Project" HorizontalAlignment="Left" Command="{Binding SaveProjectCommand}"  Width="168"/>
+                <MenuItem Header="Save Project As" Command="{Binding SaveAsProjectCommand}" />
             </MenuItem>
         </Menu>
-        <ProgressBar HorizontalAlignment="Right" Margin="0,0,10,19" Width="90" Height="20" VerticalAlignment="Bottom" Value="{Binding ProgressTracker, Mode = OneWay}"/>
-        <DataGrid Name="FileSelectionDataGrid" Grid.Column="0" HorizontalAlignment="Left" Margin="10,53,0,46" 
+        <!--<ProgressBar HorizontalAlignment="Right" Margin="0,0,10,19" Width="90" Height="20" VerticalAlignment="Bottom" Value="{Binding ProgressTracker, Mode = OneWay}"/> -->
+        <DataGrid Name="FileSelectionDataGrid" Grid.Column="0" HorizontalAlignment="Left" Margin="10,53,0,10" 
                   Width="480" AutoGenerateColumns="False" CanUserReorderColumns="False" CanUserAddRows="False" 
-                  ItemsSource="{Binding m_analysis.MetaData.Datasets, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="DataGrid_SelectionChanged">
+                  ItemsSource="{Binding Analysis.MetaData.Datasets, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="DataGrid_SelectionChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="File Name" Width="300" Binding="{Binding DatasetName}"/>
                 <DataGridCheckBoxColumn Header="Scans" IsReadOnly="True" Binding="{Binding ScansBool}"/>
@@ -125,14 +131,14 @@
             </TabItem>
         </TabControl>
         <Label Content="Working Data Files" HorizontalContentAlignment="Left" Height="28" Margin="10,25,0,0" VerticalAlignment="Top" Width="211" HorizontalAlignment="Left" FontSize="14"/>
-        <TextBox HorizontalAlignment="Left" Margin="10,0,0,19" Text="{Binding InputFilePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" Width="275" Height="22" VerticalAlignment="Bottom">
+        <!--<TextBox HorizontalAlignment="Left" Margin="10,0,0,19" Text="{Binding InputFilePath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" Width="275" Height="22" VerticalAlignment="Bottom">
             <TextBox.InputBindings>
                 <KeyBinding Command="{Binding AddFolderCommand}" Key="Enter" />
             </TextBox.InputBindings>
         </TextBox>
 
         <Button Content="Browse" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="50" Height="22" Margin="290,0,0,19" Command="{Binding SelectDirectoryCommand}"></Button>
-        <Button Content="Add" HorizontalAlignment="Left" Margin="344,0,0,19" Width="50" Height="22" VerticalAlignment="Bottom" Command="{Binding AddFolderCommand}"/>
+        <Button Content="Add" HorizontalAlignment="Left" Margin="344,0,0,19" Width="50" Height="22" VerticalAlignment="Bottom" Command="{Binding AddFolderCommand}"/> -->
 
     </Grid>
 </Window>
