--- a/src/MultiAlignRogue/DMS/DmsLookupView.xaml
+++ b/src/MultiAlignRogue/DMS/DmsLookupView.xaml
@@ -11,7 +11,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="80*" />
             <RowDefinition Height="10" />
-            <RowDefinition Height="75" />
+            <RowDefinition Height="20" />
             <RowDefinition Height="10" />
             <RowDefinition Height="25" />
         </Grid.RowDefinitions>
@@ -94,7 +94,11 @@
                 </Grid>
         </GroupBox>
         
-        <GroupBox Grid.Row="2">
+        <CheckBox Grid.Row="2" 
+                  IsChecked="{Binding ShouldCopyFiles, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                  Content="Copy files to output directory" />
+        
+        <!--<GroupBox Grid.Row="2">
             <GroupBox.Header>
                 <TextBlock Text="Output Directory" FontWeight="Bold" />
             </GroupBox.Header>
@@ -113,7 +117,7 @@
 
                 <CheckBox Margin="0,5,0,0" IsChecked="{Binding ShouldCopyFiles, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Content="Copy files to output directory" />
             </StackPanel>
-        </GroupBox>
+        </GroupBox>-->
 
         <StackPanel Orientation="Horizontal" Grid.Row="4" Visibility="{Binding IsCopying, UpdateSourceTrigger=PropertyChanged, Converter={StaticResource BoolToVis}}">
             <ProgressBar Width="70" Minimum="0" Maximum="100"  Value="{Binding Progress}" HorizontalAlignment="Left" Margin="0,0,10,0" />
