--- a/src/MultiAlignRogue/Alignment/AlignmentView.xaml
+++ b/src/MultiAlignRogue/Alignment/AlignmentView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="MultiAlignRogue.AlignmentView"
+﻿<Window x:Class="MultiAlignRogue.Alignment.AlignmentView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="{Binding WindowTitle}" Height="930" Width="700">
