--- a/src/MultiAlignRogue/Clustering/ClusterView.xaml
+++ b/src/MultiAlignRogue/Clustering/ClusterView.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:oxy="http://oxyplot.org/wpf"
-        xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock"
+        xmlns:xcad="http://schemas.xceed.com/wpf/xaml/avalondock"  
         Title="Cluster Viewer" Height="600" Width="1000">
     <Grid Margin="5">
         <xcad:DockingManager AllowMixedOrientation="True">
@@ -11,20 +11,23 @@
                     <xcad:LayoutAnchorablePaneGroup Orientation="Vertical">
                         <xcad:LayoutAnchorablePane IsMaximized="True">
                             <xcad:LayoutAnchorable Title="Cluster List" CanHide="False" CanClose="False">
-                                <DataGrid ItemsSource="{Binding Clusters}">
+                                <DataGrid ItemsSource="{Binding Clusters}" SelectedItem="{Binding SelectedCluster}" AutoGenerateColumns="False" CanUserAddRows="False"
+                                          x:Name="ClusterDataGrid">
                                     <DataGrid.Columns>
-                                        <DataGridTextColumn Header="ID" Width="30" Binding="{Binding }" />
-                                        <DataGridTextColumn Header="Cluster" Width="*" />
-                                        <DataGridTextColumn Header="# Members" Width="75" />
+                                        <DataGridTextColumn Header="ID" Width="10*" Binding="{Binding Id}" />
+                                        <DataGridTextColumn Header="Mass" Width="35*" Binding="{Binding MassMonoisotopic}" />
+                                        <DataGridTextColumn Header="NET" Width="35*" Binding="{Binding Net}" />
+                                        <DataGridTextColumn Header="# Members" Width="20*" Binding="{Binding MemberCount}" />
                                     </DataGrid.Columns>
                                 </DataGrid>
                             </xcad:LayoutAnchorable>
                             <xcad:LayoutAnchorable Title="Feature List" CanHide="False" CanClose="False">
-                                <DataGrid>
+                                <DataGrid AutoGenerateColumns="False" ItemsSource="{Binding Features}" CanUserAddRows="False">
                                     <DataGrid.Columns>
-                                        <DataGridTextColumn Header="ID" Width="30" />
-                                        <DataGridTextColumn Header="Feature" Width="75*" />
-                                        <DataGridTextColumn Header="Dataset" Width="25*" />
+                                        <DataGridTextColumn Header="ID" Width="10*" Binding="{Binding Id}" />
+                                        <DataGridTextColumn Header="Mass" Width="20*" Binding="{Binding MassMonoisotopicAligned}" />
+                                        <DataGridTextColumn Header="NET" Width="20*" Binding="{Binding NetAligned}" />
+                                        <DataGridTextColumn Header="Dataset" Width="40*" />
                                     </DataGrid.Columns>
                                 </DataGrid>
                             </xcad:LayoutAnchorable>
@@ -32,7 +35,9 @@
                     </xcad:LayoutAnchorablePaneGroup>
                     
                     <xcad:LayoutDocumentPane>
-                        <xcad:LayoutDocument Title="Clusters" CanClose="False"></xcad:LayoutDocument>
+                        <xcad:LayoutDocument Title="Clusters" CanClose="False">
+                            <oxy:PlotView Title="Clusters" DataContext="{Binding ClusterPlotViewModel}" Model="{Binding ClusterPlotModel}" />
+                        </xcad:LayoutDocument>
                         <xcad:LayoutDocument Title="Extracted Ion Chromatogram" CanClose="False"></xcad:LayoutDocument>
                         <xcad:LayoutDocument Title="MS/MS Spectra" CanClose="False"></xcad:LayoutDocument>
                     </xcad:LayoutDocumentPane>
